--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: "Kode Mono", monospace;
+/*     font-family: "Kode Mono", monospace;
     font-optical-sizing: auto;
-    font-weight: 400;
+    font-weight: 400; */
     font-size: 24px;
     font-style: normal;
     background-color: #1d1e1e;
